[FIX] web_studio: sidebar header scroll issue
Prior to this commit, the sidebar header had an unnecessary scroll bar.
This header was also partially hidden when resizing the page height.

In addition, when the header buttons were too long, there was a lack of
horizontal padding and the buttons were too squashed.

task-3415730
Part of task-3326263

closes odoo/enterprise#43999

X-original-commit: 954e03b7c3a239889567de2e2bb51c5debd4d5ca

--- a/web_studio/static/src/client_action/studio_sidebar.scss
+++ b/web_studio/static/src/client_action/studio_sidebar.scss
@@ -6,13 +6,20 @@
     .o_notebook_headers {
         position: sticky;
         top: 0;
+        flex-shrink: 0;
         z-index: 200;
         margin-bottom: $o-web-studio-sidebar-margin;
+        overflow-y: hidden;
+
+        ul {
+            border-bottom: none;
+        }
 
         li {
             flex: 1 0 auto;
             text-align: center;
             background-color: $o-web-studio-bg-dark;
+            margin: 0;
 
             .active, &:first-child:last-child {
                 background-color: $o-web-studio-bg-medium;
